Assets/styles.css
    body {
        background-color: #ebebd3;
        margin: 0;
        padding: 0;
        font-family: 'Courier New', Courier, monospace;
        margin-bottom: 10%;
        z-index: 1;
    }

    footer {
        text-align: center;
        z-index: -1;
    }

    ::-webkit-scrollbar {
        width: 0px; 
      }      

    h1 {
        margin: 0;
        font-size: 40px;
        font-weight: bolder;
    }

    h4 {
        margin-bottom: 0;
        font-family: 'Courier New', Courier, monospace;
    }

    ul {
        text-align: center;
        margin-bottom: 20px;
        padding: 0;
    }

    section {
        display: flex;
        flex-wrap: wrap;
    }

    .centered {
        margin: 20px;
        justify-content: center;
    }

    .topbar {
        display: inline;
    }

    .leftist {
        margin-top: 50px;
        justify-content: left;
    }

    .card {
        width: 150px;
        height: 200px;
        z-index: 0;
        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
        text-align: center;
        background-color: #3f6071;
        padding: 10px;
        border-radius: 20px;
        margin: 20px;
        z-index: 2;
    }

    .card a {
        text-decoration: none;
    }

    #contact {
        max-width: 250px;
    }

    #contact img {
        max-width: 100%;
    }

    #projects {
        z-index: 4;
        width: auto;
        max-width: 60vw;
        height: fit-content;
    }

    #projects img {
        max-width: 100%;
    }

    .card h2 {
        font-size: 24px;
        color: #ebebd3;
    }

    .card h4 {
        font-style: italic;
        font-size: 14px;
        color: #ebebd3;
    }

    .card p {
        font-size: 18px;
        margin-bottom: 10px;
        color: #ebebd3;
    }

    .card a button {
        border-width: 0;
        border-radius: 20px;
        background-color: #ebebd3;
        transition: all 0.3s ease;
    }

    .card a button:hover {
        border-width: 7.5px;
        border-color: #ebebd3;
        background-color: #da4167;
    }

    .link:hover{
        transition: color 0.3s ease;
        color: #da4167;
        cursor: pointer;
    }

    .slider {  
        max-width: 100%;
        position: relative;
        display: flex;
        justify-content: center;
    }

    .slider .proj {
        border-radius: 20px;
        display: none;
        cursor: zoom-in;
        transition: transform 0.2s ease-out;
    }

    .slider .proj.active {
        display: block;
    }

    .slider .proj.active.zoomed {
        transform: scale(1.5);
        cursor: zoom-out;
    }
    
    .slider .arrow {
        font-size: 50px;
        font-weight: bold;
        color: #f78764;
        position: absolute;
        top: 50%;
        transform: translateY(-50%);
        z-index: 2;
        cursor: pointer;
        user-select: none; 
    }

    .slider .arrow:hover {
        color: #da4167;
    }
    
    .slider .arrow.left {
        left: 20px;
    }
    
    .slider .arrow.right {
        right: 20px;
    }
    
    .slider .dots {
        position: absolute;
        bottom: 20px;
        left: 50%;
        transform: translateX(-50%);
        display: flex;
    }
    
    .slider .dots .dot {
        width: 10px;
        height: 10px;
        margin: 0 5px;
        border-radius: 50%;
        background: #f78764;
        cursor: pointer;
    }
    
    .slider .dots .dot.active {
        background: #da4167 ;
    }

    .wrapper {
        min-height: calc(100vh - 280px);
        position: relative;
    }

    .fixed-image {
        position: fixed;
        bottom: 0;
        left: 0;
        width: 100%;
        height: auto;
        z-index: -1;
    }

    .caleb-corner {
        position: fixed;
        top: 0;
        right: 0;
        width: 50%;
        height: auto;
    }

    .slider-btn {
        max-width: 12.5vw;
        border: none;
        background-color: transparent;
        transition: transform 1s ease;
        transition: filter 0.1s ease;
        position: relative;
        z-index: 3;
    }

    .slider-btn:hover {
        transform: scale(1.25);
        filter: brightness(1.1);
        cursor: pointer;
    }

    .slider-btn:active {
        filter: brightness(1.25);
    }

    .slider-btn img {
        max-width: 100%;
        max-height: 100%;
    }

    .slider-menu {
        background-color: #f4d35e;
        position: absolute;
        width: 100%;
        top: 0; 
        left: 50%; 
        transform: translateX(-50%);
        height: 0;
        overflow: hidden;
        transition: height 0.3s ease;

        border-radius: 20px;
        z-index: 2;
    }
    
    
    .slider-menu.active {
        height: 800px; 
    }
    
    .container {
        position: relative;
        height: 100px;
        margin: 0px 20px 0px 20px;
        transition: height 0.4s ease;
    }

    .container.active {
        height: 800px; 
    }

    .additional-container {
        position: absolute;
        top: 250px;
        bottom: 0;
        width: 0;
        height: calc(100% - 250px);
        transition: width 0.5s ease-in-out;

        background-color: #f4d35e;
        border-radius: 20px;
        z-index: 3;

        display: flex;
        justify-content: center;
        overflow: hidden;
    }

    .additional-container * {
        opacity: 0;
    }

    .additional-container.show * {
        opacity: 1;
    }

    .additional-container.left.show {
        width: 90vw;
        display: flex;
        justify-content: center;
        overflow: scroll;
    }

    .additional-container.middle.show {
        width: 70vw;
        justify-content: center;
    }

    .additional-container.middle.show ul {
        max-width: 100%;
        max-height: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
        text-align: center;
        margin: 0;
        padding: 20px;
    }

    .additional-container.middle.show ul img {
        max-width: 50%;
        max-height: 70%;
        height: auto;
    }

    .additional-container.middle.show ul p {
        max-width: 100%;
        margin: 0.5em 0;
    }

    .additional-container.right.show {
        padding: 20px;
        width: 50vw;
    }

    .additional-container.right.show a {
        text-align:center;
        display:block
    }

    .additional-container.right.show a img {
        display: block; 
        margin-left: auto; 
        margin-right: auto;
        object-fit: contain;
        max-width: 100%;
        max-height: 100%;
    }


    .content-title {
        position: relative;
        z-index: 1;
    }

    @media screen and (max-width: 1300px) {
        .slider-btn {
            max-width: 20vw;
        }

        .slider-btn h4{
            font-size: 20px;
        }

        .additional-container.right.show {
            padding: 20px;
            width: 40vw;
        }

        .additional-container.right.show img{
            margin-top: 10%;
        }


      }

    

